testing small style change to practice git stuff

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -47,7 +47,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-html *{
+html * {
     box-sizing: border-box;
 }
 /*******************************************/
@@ -141,7 +141,7 @@ footer{
 }
 
 /*******************************************/
-/*! BLINKING CURSOR
+/*! BLINKING CURSOR SVG
 /*******************************************/
 @keyframes blink {
     100%,
