--- a/flask_app/templates/dash.html
+++ b/flask_app/templates/dash.html
@@ -3,30 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/flask_app/static/css/style.css">
-    <title>The Terminal</title>
+    <title>Terminal of Goss</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<body class="flx col">
+<body>
+
+    <!-- HEADER START -->
 
     <header>
-        <svg>
-            <tspan  font-size="55px" font-family="Intel One Mono" font-weight="regular" fill="#53FF5F" class="cursor">l</tspan>
-        </svg>
-        <svg class="logo">
-            <text x="0" y="90">
-                <tspan font-size="55px" font-family="Intel One Mono" font-weight="regular" fill="#53FF5F">&#47;&#47;&#32;the Terminal
-                </tspan>
-            </text>
-        </svg>
+        <!-- <object data="/flask_app/static/images/svg/logo.svg" type=""></object> -->
+        <h1>The Terminal</h1>
+        <nav class="upper flx gap-2 mb italic">Where devs come to share the good kind of gossip.
+        </nav>
     </header>
+    <!-- HEADER END -->
+
+
+
+
+    <!-- FLASH VALIDATION MESSAGES-->
+
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <div class="flx alert col gap-1 mb">
+                {% for message in messages %}
+                        <p>{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+    {% endwith %}
+
+
 
     <main>
+        <div class="flx row gap-4">
 
 
+
+            <!-- REGISTRATION FORM -->
+
+            <form action="/register" method="post" class="flx col gap-1" id="reg">
+                <h2 class="upper mb text-center italic">join the community!</h2>
+                <div>
+                    <label for="first_name">First Name: </label>
+                    <input type="text" name="first_name">
+                </div>
+
+                <div>
+                    <label for="last_name">Last Name: </label>
+                    <input type="text" name="last_name">
+                </div>
+
+                <div>
+                    <label for="email">Email: </label>
+                    <input type="text" name="email">
+                </div>
+
+                <div>
+                    <label for="password">Create password: </label>
+                    <input type="password" name="password">
+                </div>
+
+                <div>
+                    <label for="confirm_password">Confirm password: </label>
+                    <input type="password" name="confirm_password">
+                </div>
+
+                <div>
+                    <button type="submit">
+                        create account
+                    </button>
+                </div>
+            </form>
+            <!-- FORM END REGISTRATION-->
+
+
+
+            <!-- LOGIN FORM -->
+
+            <form action="/login" method="post" class="flx col gap-1" id="login">
+                <span class="text-center mb">or</span>
+                <h2 class="upper mb text-center italic">sign-in</h2>
+                <div>
+                    <label for="email">Email: </label>
+                    <input type="text" name="email">
+                </div>
+
+                <div>
+                    <label for="password">Password: </label>
+                    <input type="password" name="password">
+                </div>
+
+                <div>
+                    <button type="submit" >login</button>
+                </div>
+            </form>
+            <!-- FORM LOGIN END -->
+
+        </div>    
     </main>
-    <footer>
-
-    </footer>
-
 </body>
 </html>
