added gitignore, built dash.html foundation

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -187,6 +187,12 @@ button{
 #reg{
     width: 1360px;
 }
+#big-section{
+    width: 70%;
+}
+#sml-section{
+    width: 30%;
+}
 /*******************************************/
 /*! PADDING & MARGIN
 /*******************************************/
