--- a/flask_app/templates/dash.html
+++ b/flask_app/templates/dash.html
@@ -13,7 +13,14 @@
     <header>
         <!-- <object data="/flask_app/static/images/svg/logo.svg" type=""></object> -->
         <h1>The Terminal</h1>
-        <nav class="upper flx gap-2 mb italic">Where devs come to share the good kind of gossip.
+        <h2>Welcome, { "session['first_name']..." }</h2>
+        <nav class="upper flx gap-2 mb italic">
+            <span>
+                <a href="#">account</a>
+            </span>
+            <span>
+                <a href="#">logout</a>
+            </span>
         </nav>
     </header>
     <!-- HEADER END -->
@@ -40,65 +47,56 @@
 
 
 
-            <!-- REGISTRATION FORM -->
+            <!-- LATEST GOSS -->
 
-            <form action="/register" method="post" class="flx col gap-1" id="reg">
-                <h2 class="upper mb text-center italic">join the community!</h2>
+            <section class="flx col gap-1" id="big-section">
+                <h2 class="upper mb text-center italic">here's the latest hot goss:</h2>
                 <div>
-                    <label for="first_name">First Name: </label>
-                    <input type="text" name="first_name">
+                    <h2>Lorem ipsum</h2>
+                    <p>Eveniet, hic tenetur? Voluptates ipsa sit quam exercitationem ipsum eligendi possimus in accusamus libero dolor, facere natus, quidem magni quasi, maxime porro!</p>
                 </div>
 
                 <div>
-                    <label for="last_name">Last Name: </label>
-                    <input type="text" name="last_name">
+                    <h2>Lorem ipsum</h2>
+                    <p>Eveniet, hic tenetur? Voluptates ipsa sit quam exercitationem ipsum eligendi possimus in accusamus libero dolor, facere natus, quidem magni quasi, maxime porro!</p>
                 </div>
 
                 <div>
-                    <label for="email">Email: </label>
-                    <input type="text" name="email">
+                    <h2>Lorem ipsum</h2>
+                    <p>Eveniet, hic tenetur? Voluptates ipsa sit quam exercitationem ipsum eligendi possimus in accusamus libero dolor, facere natus, quidem magni quasi, maxime porro!</p>
                 </div>
 
-                <div>
-                    <label for="password">Create password: </label>
-                    <input type="password" name="password">
-                </div>
-
-                <div>
-                    <label for="confirm_password">Confirm password: </label>
-                    <input type="password" name="confirm_password">
-                </div>
 
                 <div>
                     <button type="submit">
-                        create account
+                        add your goss!
                     </button>
                 </div>
-            </form>
-            <!-- FORM END REGISTRATION-->
+            </section>
+            <!-- SECTION END-->
 
 
 
-            <!-- LOGIN FORM -->
+            <!-- MY GOSS -->
 
-            <form action="/login" method="post" class="flx col gap-1" id="login">
-                <span class="text-center mb">or</span>
-                <h2 class="upper mb text-center italic">sign-in</h2>
+            <section class="flx col gap-1" id="sml-section">
+                <h2 class="upper mb text-center italic">my goss:</h2>
+                <!-- or should we have this be a little form where you add goss right here and see it metriculate to the top of the list? -->
                 <div>
-                    <label for="email">Email: </label>
-                    <input type="text" name="email">
+                    <label for="goss">goss: </label>
+                    <input type="text" name="goss-title">
                 </div>
 
                 <div>
-                    <label for="password">Password: </label>
-                    <input type="password" name="password">
+                    <label for="goss-description">spill it...: </label>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
                 </div>
 
                 <div>
-                    <button type="submit" >login</button>
+                    <button type="submit" >dish it</button>
                 </div>
-            </form>
-            <!-- FORM LOGIN END -->
+            </section>
+            <!-- SECTION END -->
 
         </div>    
     </main>
