implemented logo typing animation w pure css

--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -11,9 +11,37 @@
     <!-- HEADER START -->
 
     <header>
-        <!-- <object data="/flask_app/static/images/svg/logo.svg" type=""></object> -->
-        <h1 class="mb">The Terminal</h1>
-        <nav class="upper flx gap-2 mb italic">Where devs come to share the good kind of gossip.
+
+
+
+        <!-- ! typing and blinking cursor w/css start -->
+
+        <div class="css-typing">
+            <p>
+                Terminal
+            </p>
+            <p>
+                where devs come to gossip...
+            </p>
+            <!-- <p>
+                Typed text 3
+            </p> -->
+        </div>
+
+        <!-- ! typing and blinking cursor w/css end -->
+
+
+
+
+        <!-- ! blinking cursor w/js start -->
+
+        <!-- <h1 id="typed" class = "typed"></h1>
+            <p id="typedAgain" class="typedAgain"></p> -->
+
+        <!-- ! blinking cursor w/js end -->
+
+
+        <nav>
         </nav>
     </header>
     <!-- HEADER END -->
@@ -102,5 +130,6 @@
 
         </div>    
     </main>
+    <!-- <script src="{{url_for('static', filename='/js/typing_animation.js')}}"></script> -->
 </body>
 </html>
