--- a/flask_app/templates/dash.html
+++ b/flask_app/templates/dash.html
@@ -11,17 +11,34 @@
     <!-- HEADER START -->
 
     <header>
-        <!-- <object data="/flask_app/static/images/svg/logo.svg" type=""></object> -->
-        <h1>The Terminal</h1>
-        <h2>Welcome, { "session['first_name']..." }</h2>
-        <nav class="upper flx gap-2 mb italic">
+
+        <!-- ! typing and blinking cursor w/css start -->
+
+        <div>
+            <h1>
+                Terminal
+            </h1>
+            <h2>
+                % Where devs come to gossip.
+            </h2>
+        </div>
+        <div class="css-typing">
+            <p>
+                Welcome, { session['first_name'] }.
+            </p>
+        </div>
+
+        <!-- ! typing and blinking cursor w/css end -->
+
+        <nav class="flx row">
             <span>
-                <a href="#">account</a>
+                <a href="#">create a new post</a>
             </span>
             <span>
-                <a href="#">logout</a>
+                <a href="/logout">logout</a>
             </span>
         </nav>
+
     </header>
     <!-- HEADER END -->
 
@@ -49,7 +66,7 @@
 
             <!-- LATEST GOSS -->
 
-            <section class="flx col gap-1" id="big-section">
+            <section class="flx col gap-1 pd-10" id="big-section">
                 <h2 class="upper mb text-center italic">here's the latest hot goss:</h2>
                 <div>
                     <h2>Lorem ipsum</h2>
@@ -79,7 +96,7 @@
 
             <!-- MY GOSS -->
 
-            <section class="flx col gap-1" id="sml-section">
+            <section class="flx col gap-1 pd-10" id="sml-section">
                 <h2 class="upper mb text-center italic">my goss:</h2>
                 <!-- or should we have this be a little form where you add goss right here and see it metriculate to the top of the list? -->
                 <div>
