--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -17,29 +17,15 @@
         <!-- ! typing and blinking cursor w/css start -->
 
         <div class="css-typing">
-            <p>
+            <h1>
                 Terminal
-            </p>
-            <p>
-                where devs come to gossip...
-            </p>
-            <!-- <p>
-                Typed text 3
-            </p> -->
+            </h1>
+            <h2>
+                % Where devs come to gossip.
+            </h2>
         </div>
 
         <!-- ! typing and blinking cursor w/css end -->
-
-
-
-
-        <!-- ! blinking cursor w/js start -->
-
-        <!-- <h1 id="typed" class = "typed"></h1>
-            <p id="typedAgain" class="typedAgain"></p> -->
-
-        <!-- ! blinking cursor w/js end -->
-
 
         <nav>
         </nav>
@@ -70,7 +56,7 @@
 
             <!-- REGISTRATION FORM -->
 
-            <form action="/register" method="post" class="flx col gap-1" id="reg">
+            <form action="/register" method="post" class="flx col gap-1 pd-10" id="reg">
                 <h2 class="upper mb text-center italic">join the community!</h2>
                 <div>
                     <label for="first_name">First Name: </label>
@@ -109,9 +95,8 @@
 
             <!-- LOGIN FORM -->
 
-            <form action="/login" method="post" class="flx col gap-1" id="login">
-                <span class="text-center mb">or</span>
-                <h2 class="upper mb text-center italic">sign-in</h2>
+            <form action="/login" method="post" class="flx col gap-1 pd-10" id="login">
+                <h2 class="upper mb text-center italic">or sign-in</h2>
                 <div>
                     <label for="email">Email: </label>
                     <input type="text" name="email">
