--- a/flask_app/templates/dash.html
+++ b/flask_app/templates/dash.html
@@ -13,13 +13,13 @@
     <header>
         <!-- <object data="/flask_app/static/images/svg/logo.svg" type=""></object> -->
         <h1>The Terminal</h1>
-        <h2>Welcome, { "session['first_name']..." }</h2>
+        <h2>Welcome, "{{ session['first_name'] }}..."</h2>
         <nav class="upper flx gap-2 mb italic">
             <span>
                 <a href="#">account</a>
             </span>
             <span>
-                <a href="#">logout</a>
+                <a href="/login">logout</a>
             </span>
         </nav>
     </header>
