--- a/flask_app/templates/dash.html
+++ b/flask_app/templates/dash.html
@@ -11,8 +11,7 @@
     <!-- HEADER START -->
 
     <header>
-        <!-- <object data="/flask_app/static/images/svg/logo.svg" type=""></object> -->
-        <h1>The Terminal</h1>
+        <h1>Terminal</h1>
         <h2>Welcome, "{{ session['first_name'] }}..."</h2>
         <nav class="upper flx gap-2 mb italic">
             <span>
