implemented view one and delete functionality; added glow on hover, fixed textarea

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -133,7 +133,8 @@ a:hover{
 html {
     background-color: #0f0f0f;
 }
-input{
+input,
+textarea{
     background-color: #372f2f;
 }
 button,
@@ -151,12 +152,13 @@ button:hover,
     background-color: #4c4545;
 }
 /*******************************************/
-/*! COLOR
+/*! TEXT COLOR
 /*******************************************/
 body{
     color: #fff;
 }
-input{
+input,
+textarea{
     color: #fff;
 }
 button,
@@ -188,6 +190,19 @@ button:hover,
 .medium-grey{
     color: #372f2f;
 }
+.glow:hover {
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate;
+}
+@-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 20px #fff, 0 0 20px #fff, 0 0 20px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 6px #e60073, 0 0 7px #e60073;
+    }
+    to {
+      text-shadow: 0 0 2px #fff, 0 0 3px #ff4da6, 0 0 4px #ff4da6, 0 0 5px #ff4da6, 0 0 60px #ff4da6, 0 0 7px #ff4da6, 0 0 8px #ff4da6;
+    }
+}
 /*******************************************/
 /*! LAYOUT
 /*******************************************/
@@ -218,6 +233,9 @@ button:hover,
 .gap-5 {
     gap: 5rem;
 }
+.space-evenly{
+    justify-content: space-evenly;
+}
 /*******************************************/
 /*! WIDTHS & HEIGHTHS
 /*******************************************/
@@ -230,12 +248,12 @@ header{
     height: 190px;
 }
 main{
-    height: 1000px;
+    max-height: 1000px;
 }
 footer{
     height: 200px;
 }
-input{
+input[type=text]{
     width: 100%;
     height: 36px;
 }
@@ -295,7 +313,8 @@ button,
     border: 4px dashed #52FD61;
     border-radius: 2rem;
 }
-input{
+input,
+textarea{
     border: 1px solid #52FD61;
 }
 button,
