--- a/flask_app/templates/add_one.html
+++ b/flask_app/templates/add_one.html
@@ -54,17 +54,21 @@
                     <input type="text" name="post_title">
                 </label>
 
-                <label for="post_category">
+                <label for="post_category">Type of goss:
                     <select name="post_category" id="post_category">
-                        <option value="job_goss">Job goss</option>
-                        <option value="boss_goss">Boss goss</option>
-                        <option value="tools">Tools of the trade goss</option>
-                        <option value="mentor">Mentor/Mentee goss</option>
+                        <option value="job lead">job lead</option>
+                        <option value="boss goss">boss goss</option>
+                        <option value="tech tools">tech tools</option>
+                        <option value="mentor">mentor/mentee</option>
                     </select>
                 </label>
 
                 <label for="post_text">Spill it:
-                    <input type="textarea" name="post_text">
+                </label>
+                <textarea type="textarea" name="post_text" rows="20"></textarea>
+
+                <label for="post_title">TLDR:
+                    <input type="text" name="tldr">
                 </label>
 
                 <div>
