added edit form

--- a/flask_app/templates/add_one.html
+++ b/flask_app/templates/add_one.html
@@ -58,7 +58,7 @@
                     <select name="post_category" id="post_category">
                         <option value="job lead">job lead</option>
                         <option value="boss goss">boss goss</option>
-                        <option value="tech tools">tech tools</option>
+                        <option value="tech tool goss">tech tool goss</option>
                         <option value="mentor">mentor/mentee</option>
                     </select>
                 </label>
