implemented edit/update functionality, debugged with Lauras help

--- a/flask_app/templates/edit_one.html
+++ b/flask_app/templates/edit_one.html
@@ -56,17 +56,17 @@ DEBUGGING NEEDS (probably mostly in post model):
 
             <!-- EDIT GOSS FORM -->
 
-            <form action="/user/{{ this_user.id }}/add_goss" method="POST" class="flx col gap-1 pd-10 big-section">
+            <form action="/user/{{ this_user.id }}/goss/{{ post.id }}/update" method="POST" class="flx col gap-1 pd-10 big-section">
                 <label for="post_title">Name your piece of hot goss:
                     <input type="text" name="post_title" value="{{ post.post_title }}">
                 </label>
 
                 <label for="post_category">Type of goss:
                     <select name="post_category" id="post_category">
-                        <option value="job lead">job lead</option>
-                        <option value="boss goss">boss goss</option>
-                        <option value="tech tools">tech tools</option>
-                        <option value="mentor">mentor/mentee</option>
+                        <option value="job lead" {% if post.post_category == 'job lead' %} selected="selected" {% endif %}>job lead</option>
+                        <option value="boss goss" {% if post.post_category == 'boss goss' %} selected="selected" {% endif %}>boss goss</option>
+                        <option value="tech tools" {% if post.post_category == 'tech tools' %} selected="selected" {% endif %}>tech tools</option>
+                        <option value="mentor" {% if post.post_category == 'mentor' %} selected="selected" {% endif %}>mentor/mentee</option>
                     </select>
                 </label>
 
