fixed logOut, secured the post routes,and added validation

--- a/flask_app/templates/dash.html
+++ b/flask_app/templates/dash.html
@@ -18,7 +18,7 @@
                 <a href="/user/{{ this_user.id }}/goss/add">add your hot goss</a>
             </span>
             <span>
-                <a href="/login">logout</a>
+                <a href="/logout">logout</a>
             </span>
         </nav>
 
