--- a/flask_app/templates/view_one.html
+++ b/flask_app/templates/view_one.html
@@ -22,7 +22,7 @@
             </span>
 
             <span>
-                <a href="/login">logout</a>
+                <a href="/logout">logout</a>
             </span>
         </nav>
 
