--- a/flask_app/templates/edit_one.html
+++ b/flask_app/templates/edit_one.html
@@ -25,7 +25,7 @@ DEBUGGING NEEDS (probably mostly in post model):
                 <a href="/user/{{ this_user.id }}/dashboard">dash of goss</a>
             </span>
             <span>
-                <a href="/login">logout</a>
+                <a href="/logout">logout</a>
             </span>
         </nav>
 
